# blackboxbandits

./: .gitattributes  .gitignore  LICENSE.txt  README.md  setup.cfg
docs/: bandits.html  compare.html  meta.html  utils.html
docs/blackboxbandits/: bandits.html  compare.html  index.html  meta.html  synthetic.html  utils.html
experiments/: base_compare_script.py  best_in_hindsight.py  compare_bandit_algos.py  evaluate_optimizers.py  example.ipynb  full_details.csv  jobs.txt  jobs_remaining.txt  key_dbids.txt  meta_compare.ipynb  meta_compare_script.py  meta_comparison.p  note_script.py  results.csv  script.py  synth4_compare_script.py  synth_compare_script.py  synthetic_env_A.py  synthetic_env_B.py  synthetic_env_C.py
experiments/base_scripts/: base_compare.ipynb  base_compare_resume_script.py  jobs.txt
experiments/meta_results/: best_results_mean.csv  best_summary_std.csv  bestvtop_results_mean.csv  bestvtop_results_std.csv  bestvtop_summary_mean.csv  bestvtop_summary_std.csv  bih_results_std.csv  bih_summary_mean.csv  exp_old_results_mean.csv  exp_results_mean.csv  exp_results_std.csv  exp_summary_mean.csv  exp_summary_std.csv  exp_updated_summary_mean.csv  fpml_old_results_mean.csv  fpml_old_results_std.csv  fpml_old_summary_mean.csv  fpml_results_mean.csv  fpml_results_std.csv  fpml_summary_mean.csv  fpml_summary_std.csv  fpml_updated_results_std.csv  fpml_updated_summary_mean.csv  pert_old_results_mean.csv  pert_old_results_std.csv  pert_results_mean.csv  pert_results_std.csv  pert_summary_mean.csv  (+27 more)
notebooks/: jobs.txt  key_dbids.txt  rough.ipynb
(+1234 files in other folders)
