[metadata]
name = blackboxbandits
version = 0.0.1
author = Damon Falck
author_email = damon.falck@worc.ox.ac.uk
description = A set of tools to compare black box optimization algorithms and bandit combinations thereof.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dfalck/blackboxbandits
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
